<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="#FFFFFF">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="24dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/titulo_modificar"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginBottom="32dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_nombre_prenda"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etEditarNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:minHeight="48dp"
            android:layout_marginBottom="16dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_categoria"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/rgCategoria"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="24dp">

            <RadioButton
                android:id="@+id/rbArriba"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:text="@string/cat_arriba"
                android:checked="true"/>

            <RadioButton
                android:id="@+id/rbAbajo"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:text="@string/cat_abajo"/>

            <RadioButton
                android:id="@+id/rbCalzado"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:text="@string/cat_calzado"/>
        </RadioGroup>

        <Button
            android:id="@+id/btnActualizarPrenda"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/menta_suave"
            android:text="@string/btn_actualizar"
            android:textColor="@color/malva_texto" />

    </LinearLayout>
</ScrollView>