<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="#F5F5F5">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="24dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/titulo_crear_conjunto"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginBottom="24dp"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_arriba"
            android:textStyle="bold" />
        <Button
            android:id="@+id/btnElegirArriba"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:backgroundTint="#FFFFFF"
            android:textColor="@color/malva_texto"
            android:layout_marginBottom="24dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_abajo"
            android:textStyle="bold" />
        <Button
            android:id="@+id/btnElegirAbajo"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:backgroundTint="#FFFFFF"
            android:textColor="@color/malva_texto"
            android:layout_marginBottom="24dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_calzado"
            android:textStyle="bold" />
        <Button
            android:id="@+id/btnElegirCalzado"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:backgroundTint="#FFFFFF"
            android:textColor="@color/malva_texto"
            android:layout_marginBottom="24dp"/>

        <Button
            android:id="@+id/btnGuardarConjunto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/rosa_oscuro"
            android:text="@string/btn_guardar_conjunto"
            android:textColor="#FFFFFF" />

    </LinearLayout>
</ScrollView>