<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="#FFFFFF">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="32dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu_perfil"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginBottom="32dp"/>

        <ImageView
            android:id="@+id/ivFotoPerfil"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_launcher_foreground"
            android:background="#DDDDDD"
            android:layout_marginBottom="24dp"/>

        <Button
            android:id="@+id/btnTomarFoto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_tomar_foto" />

        <Button
            android:id="@+id/btnBackup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_backup"
            android:layout_marginTop="16dp" />

        <TextView
            android:id="@+id/tvProgresoBackup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/estado_esperando"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@android:color/holo_blue_dark"
            android:layout_marginTop="8dp" />
    </LinearLayout>
</ScrollView>